--- a/css/styles.css
+++ b/css/styles.css
@@ -10,12 +10,12 @@ ul, ol{
     list-style: none;
 }
 .logo {
-    font-family: Raleway, sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.16667;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
+    font-family: "Raleway", sans-serif;
+    font-weight:700;
+    font-size:18px;
+    line-height:1.17;
+    letter-spacing:0.03em;
+    text-transform:uppercase;
     color: #4d5ae5;
 }
 .logo-part {
@@ -51,7 +51,7 @@ ul, ol{
 .section-head {
     font-weight: 700;
 font-size: 56px;
-line-height: 1.07143;
+line-height: 1.07;
 letter-spacing: 0.02em;
 text-align: center;
 color: #fff;
@@ -59,8 +59,7 @@ color: #fff;
 .section-button {
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 background: #4d5ae5;
-width: 169px;
-height: 56px;
+cursor: pointer;
 }
 .button-name{
     font-weight: 500;
@@ -77,7 +76,7 @@ letter-spacing: 0.02em;
 color: #2e2f42;
 }
 .list-paragraph {
-    font-weight: 400;
+
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
@@ -102,7 +101,6 @@ letter-spacing: 0.02em;
 color: #2e2f42;
 }
 .name-paragraph {
-    font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
@@ -112,7 +110,6 @@ color: #434455;
     background: #2e2f42;
 }
 .footer-paragraph {
-    font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
