--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ ul, ol{
     list-style: none;
 }
 .logo {
-    font-family: "Raleway", sans-serif;
+    font-family:'Raleway', sans-serif;
     font-weight:700;
     font-size:18px;
     line-height:1.17;
