--- a/css/styles.css
+++ b/css/styles.css
@@ -89,13 +89,14 @@ color: #434455;
 font-size: 36px;
 line-height: 1.11;
 letter-spacing: 0.02em;
+text-transform: capitalize;
 text-align: center;
 color: #2e2f42;
 }
 .name {
     font-weight: 500;
 font-size: 20px;
-line-height: 1.2;
+line-height: 1.11;
 letter-spacing: 0.02em;
 color: #2e2f42;
 }
@@ -105,6 +106,16 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
 }
+
+
+
+
+
+
+
+
+
+
 .footer{
     background: #2e2f42;
 }
