--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,7 @@ color: #2E2F42;
 font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
-color: #2F2F42;
+color: #2E2F42;
 }
 .name-p {
 font-size: 16px;
