add initial files

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,10 @@ line-height:1.5;
 letter-spacing:0.04em;
 color:#FFF;
 }
+.section-button:hover,
+.section-button:focus{
+    background-color: #404BBF;
+}
 .list-head{
 font-weight:500;
 font-size:20px;
